# claude-agent-skills

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/rules/: clasi-se-process.md
.github/agents/: documentation-expert.md  python-expert.md
.github/skills/: generate-documentation.md
agents/: architect.md  architecture-reviewer.md  code-reviewer.md  documentation-expert.md  product-manager.md  project-manager.md  python-expert.md  requirements-analyst.md  systems-engineer.md  technical-lead.md
clasi/: AGENTS.md  __init__.py  agent.py  artifact.py  cli.py  contracts.py  dispatch_log.py  frontmatter.py  hook_handlers.py  init_command.py  mcp_server.py  plan_to_todo.py  project.py  se-overview-template.md  sprint.py  state_db.py  state_db_class.py  templates.py  ticket.py  todo.py  todo_split.py  uninstall_command.py  versioning.py
clasi/hooks/: role_guard.py
clasi/instructions/: coding-standards.md  git-workflow.md  rundbat.md  software-engineering.md  subagent-protocol.md  testing.md
clasi/rules/: auto-approve.md  clasi-se-process.md  scold-detection.md
clasi/skills/: consolidate-architecture.md  ghtodo.md  parallel-execution.md  project-knowledge.md  report.md  se.md
clasi/templates/: architecture-update.md  clasi-section.md  overview.md  review-checklist.md  sprint-brief.md  sprint-usecases.md  sprint.md  ticket.md
clasi/tools/: artifact_tools.py  dispatch_tools.py  process_tools.py
clasr/: README.md  SCHEMA.md  __init__.py  cli.py  frontmatter.py  instructions.md  links.py  manifest.py  markers.py  merge.py
claude_agent_skills/: __init__.py  agent.py  artifact.py  artifact_tools.py  cli.py  contract-schema.yaml  contracts.py  dispatch_log.py  dispatch_tools.py  init_command.py  link_agents.py  mcp_server.py  process_tools.py  project.py  sprint.py  state_db.py  state_db_class.py  templates.py  ticket.py  todo_split.py  versioning.py
claude_agent_skills/agents/: architect.md  architecture-reviewer.md  code-reviewer.md  documentation-expert.md  project-manager.md  python-expert.md  requirements-analyst.md
claude_agent_skills/hooks/: __init__.py  role_guard.py
claude_agent_skills/init/: agents-section.md
claude_agent_skills/instructions/: architectural-quality.md  dotconfig.md  git-workflow.md  software-engineering.md  subagent-protocol.md  worktree-protocol.md
claude_agent_skills/rules/: clasi-se-process.md  scold-detection.md
claude_agent_skills/skills/: auto-approve.md  close-sprint.md  create-technical-plan.md  create-tickets.md  dispatch-subagent.md  elicit-requirements.md  execute-ticket.md  generate-documentation.md  gh-import.md  ghtodo.md  next.md  oop.md  plan-sprint.md  project-initiation.md  project-status.md  report.md  self-reflect.md  tdd-cycle.md
claude_agent_skills/templates/: sprint-architecture.md  sprint.md  ticket.md
claude_agent_skills/tools/: __init__.py  artifact_tools.py  dispatch_tools.py
docs/: clasi-improvement-recommendations.md  report-skill-usage.md
docs/clasi/: .clasi.db-shm  AGENTS.md  ClasiSEProjectOverview.md  brief.md  settings.yaml  usecases.md
docs/design/: overview.md  usecases.md
docs/plans/: ProjectOverview.md  brief.md  technical-plan.md  usecases.md
docs/spec/: specification.md
instructions/: coding-standards.md  git-workflow.md  software-engineering.md  system-engineering.md  testing.md
instructions/languages/: python.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  task_created.py
skills/: close-sprint.md  create-technical-plan.md  create-tickets.md  elicit-requirements.md  execute-ticket.md  plan-sprint.md  project-initiation.md  project-status.md  todo.md
tests/: conftest.py  test_artifact_tools.py  test_frontmatter.py  test_process_tools.py  test_state_db.py  test_todo_split.py
tests/clasr/: conftest.py  test_cli.py  test_frontmatter.py  test_links.py  test_manifest.py  test_markers.py  test_merge.py  test_multi_tenant.py  test_platform_claude.py  test_platform_codex.py  test_platform_copilot.py  test_platform_detect.py  test_three_platform_roundtrip.py
tests/e2e/: EVALUATION.md  conftest.py  repro_query_in_mcp.py  repro_server.py  repro_standalone.py  run_e2e.py  run_project_init.sh  run_sprint.sh  test_dispatch_integration.py  verify.py
tests/example_asr/: AGENTS.md  README.md
tests/system/: test_artifact_tools.py  test_content_smoke.py  test_process_tools.py  test_sprint_review.py
tests/unit/: test_agent.py  test_artifact.py  test_cli.py  test_cli_init.py  test_contracts.py  test_dispatch_log.py  test_dispatch_tools.py  test_e2e_verify.py  test_frontmatter.py  test_frontmatter_tools.py  test_gh_import.py  test_github_issue.py  test_hook_handlers.py  test_init_command.py  test_init_interactive.py  test_links.py  test_markers.py  test_mcp_server.py  test_no_sdk_import.py  test_plan_to_todo.py  test_platform_claude.py  test_platform_codex.py  test_platform_copilot.py  test_platform_detect.py  (+15 more)
(+986 files in other folders)
