[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clasi"
version = "0.20260320.2"
description = "MCP server for AI-driven software engineering process — agents, skills, instructions, and artifact management"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Eric Busboom"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
clasi = "claude_agent_skills.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/e2e/project"]
addopts = "--cov=claude_agent_skills --cov-report=term-missing --cov-report=lcov:lcov.info"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.setuptools.package-data]
claude_agent_skills = [
    "agents/**/*.md",
    "agents/**/*.md.j2",
    "init/*.md",
    "skills/*.md",
    "instructions/*.md",
    "instructions/languages/*.md",
    "rules/*.md",
    "templates/*.md",
    "se-overview-template.md",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_agent_skills*"]
